# axum-tonic-demo

./: .gitignore  Cargo.toml  README.md  build.rs
migrations/: 20250418174041_todos.sql
protos/: todo.proto
scalar-warpper/: Cargo.toml  lib.rs  pnpm-lock.yaml
src/: database.rs  grpc.rs  lib.rs  rest.rs
