[package]
name = "axum-tonic-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.7"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
hyper = "1.8.1"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "json"] }
tabled = "0.20.0"
tonic = "0.14.5"
tower = { version = "0.5.3", default-features = true, features = ["steer"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = "0.13.2"
tonic-prost = "0.14.5"

[build-dependencies]
protox = "0.9.1"
tonic-prost-build = "0.14.5"
