[workspace]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR APACHE"

[workspace.dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }

[package]
name = "axum-tonic-demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = { workspace = true }
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
hyper = "1.8.1"
prost = "0.14.3"
reqwest = "0.13.2"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "json"] }
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tower = { version = "0.5.3", default-features = true, features = ["steer"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { version = "0.2.0" }
utoipa-scalar-warpper = { version = "0.2.0", features = ["axum"] }

[build-dependencies]
protox = "0.9.1"
tonic-prost-build = "0.14.5"
