[package]
name = "scalar-warpper"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "scalar_warrper"
path = "lib.rs"

[dependencies]
axum = { workspace = true }
http = "1"
maud = { version = "0.27", features = ["axum"] }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
